[package]
name = "rust-lib"
version = "0.1.0"
authors = ["Brennan Ashton <bashton@brennanashton.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = ["std"]
std = []

[dependencies]
faster = { git = "https://github.com/AdamNiederer/faster", branch = "master" }
itertools = "0.8.0"
